[package]
name = "rust_keeper"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = "2.0.0"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
