[package]
name = "brigatory"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = "2.0.0"
bson = "2.0"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
bcrypt = "0.11"
jsonwebtoken = "8.0"
futures-util = "0.3"
actix-service = "2.0"
env_logger = "0.10"
log = "0.4"
